# pyelog

./: README.md  pyproject.toml
example/: lblogbook.py
src/pyelog/: __init__.py  pyelog.py
