[project]
name = "pyelog"
version = "0.1.0"
description = "A Python library for interacting with ELOG (Electronic Logbook) servers"
readme = "README.md"
authors = [
    { name = "Davide Nicotra", email = "davide.nicotra@cern.ch" }
]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
